--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,7 +1,7 @@
 name: Build APK
 
 on:
-  workflow_dispatch:   # ← можно запускать вручную
+  workflow_dispatch:
   push:
     branches: [ main ]
 
@@ -11,18 +11,15 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/cache@v3
-        with:
-          path: Library
-          key: Library-Android-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-          restore-keys: Library-
-
-      - name: Build APK
+      - name: Build APK (без лицензии и keystore)
         uses: game-ci/unity-builder@v4
         with:
           targetPlatform: Android
           androidAppBundle: false
-          unityVersion: 2021.3.27f1   # ← работает без лицензии!
+          unityVersion: 2021.3.27f1
+          buildMethod: UnityBuilderAction.BuildScript.PerformAndroidBuild
+          androidKeystorePass: none
+          androidKeyaliasPass: none
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
