--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,8 +3,7 @@ name: Build APK
 on:
   workflow_dispatch:
   
-    branches: [ main ]
-
+    branches: [ main 
 jobs:
   build:
     runs-on: ubuntu-latest
