--- a/.github/workflows/activation.yml
+++ b/.github/workflows/activation.yml
@@ -1,21 +1,20 @@
-e: Acquire activation file
+name: Unity Activation
 
 on:
-  workflow_dispatch: {}
+  workflow_dispatch:
 
 jobs:
   activation:
-    name: Request manual activation file
     runs-on: ubuntu-latest
     steps:
-      - name: Request manual activation file
+      - name: Request activation file
         id: getManualLicenseFile
         uses: game-ci/unity-request-activation-file@v2
         with:
           unityVersion: 2021.3.27f1
-      
-      - name: Expose as artifact
+
+      - name: Upload .alf
         uses: actions/upload-artifact@v4
         with:
-          name: Manual Activation File
+          name: Unity-Activation-File
           path: ${{ steps.getManualLicenseFile.outputs.filePath }}
