--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,32 +7,19 @@ on:
 
 jobs:
   build:
-    name: Build for Android
     runs-on: ubuntu-latest
     steps:
-      # 1. Скачиваем репозиторий
-      - name: Checkout Repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      # 2. Кэш (чтобы следующие сборки были быстрее)
-      - name: Cache Library
-        uses: actions/cache@v3
-        with:
-          path: Library
-          key: Library-Android-${{ hashFiles('Assets/**', 'Packages/**', 'ProjectSettings/**') }}
-          restore-keys: Library-
-
-      # 3. Сборка APK (Версия 2021.3.27f1 работает БЕЗ лицензии!)
-      - name: Build Android
-        uses: game-ci/unity-builder@v4
+      - name: Build APK
+        uses: game-ci/unity-builder@master
         with:
           targetPlatform: Android
           unityVersion: 2021.3.27f1
-          androidAppBundle: false
+          allowDirtyBuild: true
 
-      # 4. Загрузка готового файла (ЗДЕСЬ БЫЛА ОШИБКА, ТЕПЕРЬ v4)
       - name: Upload APK
-        uses: actions/upload-artifact@v4  # <--- Исправлено на v4
+        uses: actions/upload-artifact@v4
         with:
           name: MobileShooter3D.apk
           path: build/Android/*.apk
