--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Build Android APK
-        uses: game-ci/unity-builder@v5.0.0   # ← ЭТО РАБОТАЕТ!
+        uses: game-ci/unity-builder@v4   # ← Эта версия точно существует!
         with:
           targetPlatform: Android
           unityVersion: 2021.3.27f1
